components/Frame/frame.module.scss
$frame-padding: 3rem;
$frame-padding-mobile: 0.5rem;
$socialLinks-min-height: 6rem;
$halfRow-height: 4rem;

.header {
	position: fixed;
	inset: 0;
	bottom: auto;
	overflow: hidden;
	height: 6rem;
	margin: 0 1.5rem;
	display: flex;
	justify-content: center;
}

@media only screen and (max-width: $mobile-breakpoint) {
	.header {
		margin: 0;
	}
}

.heading {
	text-align: center;
	color: #000;
}

.name {
	position: absolute;
	top: 1.25rem;
	font-size: 0.75rem;
	line-height: 1.25;
	color: var(--header-color);
	text-align: center;
}

.frame {
	overflow: scroll;
	position: absolute;
	top: 6rem;
	left: $frame-padding;
	right: $frame-padding;
	bottom: 0;
	border-top: var(--frame-border);
}

@media only screen and (max-width: $mobile-breakpoint) {
	.frame {
		left: $frame-padding-mobile;
		right: $frame-padding-mobile;
	}
}

.contentWrapper {
	gap: 2.25rem;
	border: var(--frame-border);
	border-top: none;
	background-color: var(--frame-border-color);
	display: flex;
	flex-direction: column;
	align-items: center;
	overflow: visible;
	padding: 2rem 6vw;
	min-height: calc(
		85dvh - calc($frame-padding + $socialLinks-min-height + $halfRow-height)
	);
}

.contentHeader {
	display: flex;
	justify-content: center;
	align-items: flex-start;
	opacity: 0.3;
	font-size: 1.125rem;
	padding: 1rem 0;
}

@media only screen and (max-width: $mobile-breakpoint) {
	.contentHeader {
		font-size: 1rem;
	}
}

.content {
	width: 100%;
	height: auto;
	max-width: 66rem;
	display: flex;
	flex-direction: column;
	gap: 3rem;

	section {
		display: flex;
		flex-direction: column;
		gap: 2.25rem;
	}
}

.footer {
	width: 100%;
	display: grid;
	grid-template-rows: auto 1fr;
	grid-template-columns: 1fr 1fr;
	border: var(--frame-border);
	border-top: none;
	margin-bottom: $frame-padding;
}

@media only screen and (max-width: $mobile-breakpoint) {
	.footer {
		font-size: 0.875rem;
	}
}

.fullRow,
.halfRow {
	display: flex;
	justify-content: center;
	align-items: center;
}

.fullRow {
	grid-column: 1 / span 2;
	background-color: var(--frame-social-link-background-color);
}

.socialLinks {
	min-height: $socialLinks-min-height;
	height: calc(5dvw + 2rem);
}

.socialLinks svg {
	fill: var(--frame-social-link-icon-color);
}

.halfRow {
	height: $halfRow-height;
	padding: 1rem;
	border-top: var(--frame-border);
	flex-direction: column;
}

.left {
	background-color: var(--frame-footer-left-background-color);
	align-items: flex-start;
}

.email,
.location {
	color: #000;
}

.left:hover {
	background-color: inherit;
	color: var(--home-item-foreground);

	.email,
	.location {
		color: var(--home-item-foreground);
	}
}

.right {
	color: white !important;
	background-color: var(--frame-footer-right-background-color);
	align-items: flex-end;
}

.right:hover {
	background-color: var(--frame-footer-left-background-color-hover);
}

